# DamageScanner

./: .gitignore  .readthedocs.yaml  .travis.yml  404.html  LICENSE  README.md  dev-requirements.txt  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  test_damagemap.tif  test_losses.csv  versioneer.py
.github/workflows/: black.yml  ci.yml  docs-ci.yml  publish.yml  pytest.yml  release.yml  ruff-check.yml  ruff-format.yml
api/: index.html
data/curves/: Table_D2_Hazard_Fragility_and_Vulnerability_Curves_V1.1.0_conversions.xlsx  maxdam.csv
data/exposure/: landuse.dbf  landuse.shx
data/hazard/: inundation_map.tif  windstorm.nc.aux.xml
data/jamaica/hazard/: FD_1in1000.tif  FD_1in1000.tif.aux.xml
data/jamaica/vulnerability/: Table_D2_Multi-Hazard_Fragility_and_Vulnerability_Curves_V1.0.0.xlsx  Table_D3_Costs_V1.0.0.xlsx  Table_D3_Costs_V1.0.1.xlsx  curves_osm.csv  maxdam_osm.csv
data/kampen/exposure/: landuse.gpkg  landuse.shp
data/kampen/hazard/: inundation_map.tif.aux.xml  windstorm.nc.aux.xml
data/kampen/vulnerability/: curves.csv  curves_osm.csv  maxdam.csv  maxdam_osm.csv
data/landuse/: kampen.osm.pbf  landuse_map.tif
development/: Dev_Notebook.ipynb
doc/: conf.py  environment.yml  requirements.txt
docs/: Makefile  api.md  conf.py  get_started.md  index.md  index.rst  main.rst  raster.rst  requirements.txt  risk.rst  sensitivity.rst  vector.rst
docs/examples/: raster-based.md  vector-based.md
docs/how-to/: osm.md  overview.md  raster.md  vector.md
docs/images/: logo.ai  logo_icon.ai
docs/javascripts/: set-body-class.js
docs/source/: conf.py  getstarted.rst  index.rst  plot.rst  sensitivity.rst  vector.rst
docs/stylesheets/: extra.css
examples/: DamageScanner.ipynb  DamageScanner_Class.ipynb  RasterScanner.ipynb  Sensitivity Analysis.ipynb  VectorScanner.ipynb  osm-flex-workflow.ipynb  risk-workflow.ipynb
examples/overview/: index.html
examples/raster-based/: index.html
examples/vector-based/: index.html
get_started/: index.html
how-to/osm/: index.html
how-to/overview/: index.html
how-to/raster/: index.html
how-to/vector/: index.html
images/: logo_icon.ai
javascripts/: set-body-class.js
paper/: paper.md
search/: search_index.json
src/damagescanner/: __init__.py  base_values.py  compute.py  config.py  core.py  download.py  main.py  osm.parquet  osm.py  plot.py  raster.py  risk.py  sensitivity_analysis.py  utils.py  vector.py
stylesheets/: extra.css
tests/: setup.py  test_RasterScanner.py  test_compute.py  test_init.py  test_object_scanner.py  test_raster.py  test_vector_scanner.py  test_vectorscanner.py
