[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "damagescanner"
version = "0.9-beta.16"
authors = [
    {name = "Elco Koks", email = "elco.koks@vu.nl"},
    {name = "Jens de Bruijn", email = "jens.de.bruijn@vu.nl"},
]

license = {text = "MIT License"}
description = "Direct damage assessments for natural hazards"
keywords = ["GIS", "natural hazards", "damage assessment", "remote sensing", "raster", "vector", "geospatial"]
classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Operating System :: OS Independent",
        "Topic :: Scientific/Engineering :: GIS",
        "Topic :: Utilities",
    ]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "geopandas",
    "numpy",
    "pyproj",
    "rasterio",
    "xarray",
    "rioxarray",
    "pandas",
    "shapely >= 2.0",
    "tqdm",
    "exactextract",
    "scipy>=1.13.1",
]

[tool.setuptools.package-data]
"*" = ["*.ini"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.urls]
"Homepage" = "https://github.com/ElcoK/DamageScanner"
"Documentation" = "https://damagescanner.readthedocs.io/en/latest/"
